# example-azure-sphere-mt3620

./: .gitignore  Dockerfile  README.md  install_azure_sphere_sdk.sh
lib/MT3620_M4_Driver/: cmake_install.cmake
lib/MT3620_M4_Driver/MT3620_M4_BSP/FreeRTOS/: cmake_install.cmake
lib/MT3620_M4_Driver/lib/MT3620_M4_BSP/: cmake_install.cmake
mt3620_m4_software-master/: CMakeCache.txt
mt3620_m4_software-master/MT3620_M4_BSP/printf/: printf.h
mt3620_m4_software-master/MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_CPP/: linker.ld
mt3620_m4_software-master/MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2C_Accelerometer/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  FreeRTOSConfig.h  linker.ld  main.cpp
mt3620_m4_software-master/MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2C_Accelerometer/model-parameters/: anomaly_clusters.h  dsp_blocks.h  model_metadata.h
mt3620_m4_software-master/MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2C_Accelerometer/porting/: ei_classifier_porting.cpp
mt3620_m4_software-master/MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2C_Accelerometer/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
source/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  FreeRTOSConfig.h  app_manifest.json  linker.ld  lsm6dso_driver.c  lsm6dso_driver.h  main.cpp
source/edge-impulse-sdk/classifier/: ei_aligned_malloc.h  ei_classifier_smoothen.h  ei_run_classifier.h
source/edge-impulse-sdk/dsp/: memory.hpp  numpy.hpp
source/edge-impulse-sdk/dsp/kissfft/: kiss_fft.h
source/model-parameters/: anomaly_clusters.h  dsp_blocks.h  model_metadata.h
source/porting/: debug_log.cpp  ei_classifier_porting.cpp
source/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
